tests/negative/neg_pr116_legacy_begin.safe
package neg_pr116_legacy_begin

   function broken returns integer

      begin
         return 1;
